syntax = "proto3";

// 后台通信协议定义

import "com.struct.proto";
import "svr.struct.proto";

package hello;

/////////////////////////////////////////////////////
////  此处开始是登入相关协议
/////////////////////////////////////////////////////
message SSPlayerKickOffReq {
    uint32 reason    = 1; // 原因
    string gm_reason = 2; // 原因
}

message SSPlayerKickOffRsp {}

/////////////////////////////////////////////////////
////  登入相关协议到此结束
/////////////////////////////////////////////////////

/////////////////////////////////////////////////////
////  此处开始是外部接入支持的协议
/////////////////////////////////////////////////////

/////////////////////////////////////////////////////
////  外部接入支持的协议到此结束
/////////////////////////////////////////////////////

// 协议包头
message SSMsgHead {
    // 通用数据
    int32  error_code = 1;
    int64  timestamp  = 2;
    uint32 sequence   = 3;

    // 通道和任务信息
    uint64 bus_id      = 11;
    uint64 src_task_id = 12;
    uint64 dst_task_id = 13;

    // 玩家标识
    uint64 player_user_id = 101; // 如果涉及玩家此项必需
    string player_open_id = 102; // 此项可选
}

// 协议包体
message SSMsgBody {
    oneof body_oneof {
        SSPlayerKickOffReq mss_player_kickoff_req = 2001;
        SSPlayerKickOffRsp mss_player_kickoff_rsp = 2002;
    }
}

// 协议包
message SSMsg {
    SSMsgHead head = 1;
    SSMsgBody body = 2;
}
